@@ -9,7 +9,7 @@ import warnings
 import numpy as np
 
 import rasterio
-from rasterio.dtypes import validate_dtype, can_cast_dtype, get_minimum_dtype
+from rasterio.dtypes import validate_dtype, can_cast_dtype, get_minimum_dtype, _getnpdtype
 from rasterio.enums import MergeAlg
 from rasterio.env import ensure_env
 from rasterio.errors import ShapeSkipWarning
@@ -276,7 +276,7 @@ def rasterize(
         if dtype is not None and not can_cast_dtype(default_value_array, dtype):
             raise ValueError(format_cast_error('default_vaue', dtype))
 
-    if dtype is not None and np.dtype(dtype).name not in valid_dtypes:
+    if dtype is not None and _getnpdtype(dtype).name not in valid_dtypes:
         raise ValueError(format_invalid_dtype('dtype'))
 
     valid_shapes = []
@@ -332,7 +332,7 @@ def rasterize(
         raise ValueError(format_cast_error('shape values', dtype))
 
     if out is not None:
-        if np.dtype(out.dtype).name not in valid_dtypes:
+        if _getnpdtype(out.dtype).name not in valid_dtypes:
             raise ValueError(format_invalid_dtype('out'))
 
         if not can_cast_dtype(shape_values, out.dtype):
